examples/test/testpolicy7643.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7643
  namespace: namespace238
spec:
  podSelector:
    matchLabels:
      key33: value2
      key28: value27
      key12: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value40
      podSelector:
        matchLabels:
          key24: value33
          key23: value31
